objects/Student__c.object
<CustomObject>
    <label>Student</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Dist__c</fullName>
        <label>Dist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RR</fullName>
                </value>
                <value>
                    <fullName>Hyd</fullName>
                </value>
                <value>
                    <fullName>Wl</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TS</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>KL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <externalId>true</externalId>
        <label>external id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_modified_email__c</fullName>
        <defaultValue>$Profile.LastModifiedDate</defaultValue>
        <label>last modified email</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>total_no_of_students__c</fullName>
        <label>total no.of students</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Sample_1</fullName>
        <active>true</active>
        <label>Sample 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sample_2</fullName>
        <active>true</active>
        <label>Sample 2</label>
    </recordTypes>
    <validationRules>
        <fullName>Sample_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>Email__c =&apos;&apos;</errorConditionFormula>
        <errorDisplayField>Email__c</errorDisplayField>
        <errorMessage>Email should be fill</errorMessage>
    </validationRules>
</CustomObject>